0.2.0 - 2007-*-*
 + Reorganized project to better fit GIT
 + Refactored and cleaned sources
   * Broke event_callback into its own source file
 + Added timer/timeout capabilities + minor test
 + Added event_buffer object
  * Can 'add' a sequence of strings/event_buffers
  * Can 'get_data', 'length','drain','close' and create new instances
  * Can 'readline'
======
0.1.2 - 2007-08-18
+ Setup system to use new coro management as described in COROUTINE_MANAGEMENT
  The callbacks are called from the event_loop 'thread' rather than that which they are
  created in.  This will prevent the self-resume problem as well as dead-thread problems.
- Recognized issues to fix in next release:
  * Socket/event closing needs to be cleaned
  * luaevent.lua needs refactoring
  * luaevent.[ch] need to be cleaned up
======
0.1.1 - 2007-06-13
+ Fixed event-handling code to cancel events on nothing being returned
+ Added socket/object cleanup.
+ Filed bug to libevent about the strange valgrind-released errors
- Recognized following issues:
  Timeouts needed
  Need to handle events setup from inside a coroutine... need to get a global Lua state from a thread...
======
0.1.0 - 2007-06-10 22:00 EST
Completed mostly working version
* Moved to a mode where addevent calls a callback  rather than it being instantiated within.
	If the callback returns -1, then no event is ever setup,
	Otherwise the integer value is used to setup the event.
  This allows for using coroutine.wrap rather than a cooked-up wrapper
* Tests work, although there are a few remaining issues:
* Need to figure a good way of preserving the event object,
  not sure if current method is good enough, since the socket
  is the only anchor, and it is only held inside the coro.. 
  circular reference, something that Lua 'handles' well.
* Doing more than the maximum sockets the process is allows
  causes strangeness to occur in libevent.. somehow
  it is getting around to epoll_add which is causing valgrind
  to barf.