@@ -6,7 +6,8 @@
  + Added event_buffer object
   * Can 'add' a sequence of strings/event_buffers
   * Can 'get_data', 'length','drain','close' and create new instances
-  * Can 'readline'
+  * Can 'readline', 'read' from file des, 'write' to file des
+  * Added lunit tests for basic functions (read/write from/to FD)
 ======
 0.1.2 - 2007-08-18
 + Setup system to use new coro management as described in COROUTINE_MANAGEMENT
